# sky-bms

./: CMakeLists.txt  readme.md
docs/: Assessment - Battery Management System.docx
modules/: main.cpp
modules/battery/artifact/: battery.md
modules/battery/src/: battery.cpp  battery.h
modules/bms/artifact/: bms.md
modules/bms/src/: bms.cpp  bms.h
modules/common/: constants.h
modules/data/: drive-profile.csv  ocv-soc.csv
modules/utils/: lut.h  readcsv.h  safedivide.h
